# noveum-sdk-python

./: .bandit  .coderabbit.yaml  ARCHITECTURE.md  AUTOGEN_README.md  CHANGELOG.md  CONTRIBUTING.md  ENGINEER_VERIFICATION_GUIDE.md  LICENSE  README.md  RELEASE_GUIDE.md  SDK_IMPLEMENTATION_GUIDE.md  SDK_VERIFICATION_NOTEBOOK.ipynb  TESTING.md  USAGE_GUIDE.md  VERIFICATION_CHECKLIST.md  codecov.yml  pyproject.toml  safety-report.json  setup.py
.github/: WORKFLOWS.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  tests.yml  workflow.yml
doc/: ARCHITECTURE.md  AUTOGEN_README.md  README.md  USAGE_GUIDE.md
examples/: README.md  async_evaluation.py  basic_evaluation.py  regression_test.py
noveum/: __init__.py  auth.py  client.py  exceptions.py  helpers.py  http_client.py  logging.py  pagination.py
noveum/models/: __init__.py  common.py  datasets.py  evals.py  scorers.py  traces.py
noveum/resources/: __init__.py  base.py  datasets.py  evals.py  scorers.py  traces.py
noveum_api_client/: __init__.py  errors.py  noveum_client.py
noveum_api_client/api/: __init__.py
noveum_api_client/api/administration/: get_api_admin_organizations.py  get_api_admin_users.py
noveum_api_client/api/ai/: delete_api_ai_chats_by_id.py  get_api_ai_chats.py  get_api_ai_chats_by_id.py  post_api_ai_chats.py  post_api_ai_chats_by_id_messages.py  put_api_ai_chats_by_id.py
noveum_api_client/api/api_keys/: delete_api_by_organisation_slug_api_keys.py  get_api_by_organisation_slug_api_keys.py  post_api_by_organisation_slug_api_keys.py
noveum_api_client/api/audio/: __init__.py  post_api_v1_audio.py
noveum_api_client/api/auth/: ban_user.py  create_user.py  get_api_auth_delete_user_callback.py  get_api_auth_error.py  get_api_auth_get_session.py  get_api_auth_list_accounts.py  get_api_auth_list_sessions.py  get_api_auth_ok.py  get_api_auth_organization_get_active_member.py  get_api_auth_organization_get_full_organization.py  get_api_auth_organization_get_invitation.py  get_api_auth_organization_list.py  get_api_auth_passkey_generate_register_options.py  get_api_auth_passkey_list_user_passkeys.py  get_api_auth_verify_email.py  impersonate_user.py  list_user_sessions.py  list_users.py  post_api_auth_admin_set_user_password.py  post_api_auth_admin_stop_impersonating.py  post_api_auth_change_email.py  (+43 more)
noveum_api_client/models/: __init__.py  account.py  ban_user_body.py  ban_user_response_200.py  ban_user_response_400.py  ban_user_response_401.py  ban_user_response_403.py  ban_user_response_404.py  ban_user_response_429.py  ban_user_response_500.py  create_user_body.py  create_user_response_200.py  create_user_response_400.py  create_user_response_401.py  create_user_response_403.py  create_user_response_404.py  create_user_response_429.py  create_user_response_500.py  delete_api_by_organisation_slug_api_keys_response_200.py  delete_api_by_organisation_slug_api_keys_response_400.py  delete_api_by_organisation_slug_api_keys_response_401.py  delete_api_by_organisation_slug_api_keys_response_403.py  delete_api_by_organisation_slug_api_keys_response_404.py  delete_api_by_organisation_slug_api_keys_response_500.py  delete_api_by_organisation_slug_credentials_by_id_response_401.py  delete_api_by_organisation_slug_credentials_by_id_response_401_details.py  delete_api_by_organisation_slug_credentials_by_id_response_403.py  delete_api_by_organisation_slug_credentials_by_id_response_403_details.py  delete_api_by_organisation_slug_credentials_by_id_response_404.py  delete_api_by_organisation_slug_credentials_by_id_response_404_details.py  get_api_ai_chats_by_id_response_200.py  get_api_ai_chats_by_id_response_200_messages_item.py  get_api_ai_chats_by_id_response_200_messages_item_role.py  get_api_ai_chats_response_200_item.py  get_api_ai_chats_response_200_item_messages_item.py  get_api_ai_chats_response_200_item_messages_item_role.py  get_api_auth_delete_user_callback_response_400.py  get_api_auth_delete_user_callback_response_401.py  get_api_auth_delete_user_callback_response_403.py  get_api_auth_delete_user_callback_response_404.py  (+602 more)
tests/: __init__.py  conftest.py  test_config.py  test_integration_complete.py
tests/integration/: README.md  __init__.py  conftest.py  constants.py  pytest.ini  run_test.sh  test_ai_chats.py  test_api_keys.py  test_audio.py  test_auth.py  test_complete_flow.py  test_credentials.py  test_datasets.py  test_etl_jobs.py  test_integration.py  test_other_apis.py  test_projects.py  test_scorer_results.py  test_scorers.py  test_telemetry.py  test_telemetry_plugins.py  test_traces.py  test_webhooks.py  utils.py
tests/unit/: QUICK_START.md  README.md  __init__.py  conftest.py  pytest.ini  test_api_keys_wrappers.py  test_api_wrappers.py  test_audio_wrappers.py  test_auth_wrappers.py  test_client.py  test_client_wrapper.py  test_datasets_wrappers.py  test_etl_jobs_wrappers.py  test_exceptions.py  test_models.py  test_module_structure.py  test_projects_wrappers.py  test_resources.py  test_scorer_results_wrappers.py  test_scorers_wrappers.py  test_telemetry_wrappers.py  test_traces_wrappers.py  test_webhooks_projects_other_wrappers.py
(+49 files in other folders)
