[tool.poetry]
name = "noveum-sdk"
version = "1.0.2"
description = "A client library for accessing Noveum API"
authors = []
readme = "README.md"
packages = [
    { include = "noveum_api_client" },
]
include = ["noveum_api_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = ">=0.23.0,<0.29.0"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.2"
version_files = [
    "pyproject.toml:version"
]
tag_format = "v$version"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
