[tool.poetry]
name = "noveum-sdk"
version = "2.0.0"
description = "Official Python SDK for the Noveum.ai API - Core evaluation and data management APIs"
authors = ["Noveum Team <team@noveum.ai>"]
readme = "README.md"
homepage = "https://noveum.ai"
repository = "https://github.com/Noveum/noveum-sdk-python"
documentation = "https://github.com/Noveum/noveum-sdk-python"
keywords = ["noveum", "ai", "ml", "evaluation", "testing", "api", "sdk"]
license = "Apache-2.0"
packages = [
    { include = "noveum_api_client" },
]
include = ["noveum_api_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = ">=0.23.0,<0.29.0"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "2.0.0"
version_files = [
    "pyproject.toml:version"
]
tag_format = "v$version"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
